# OpenScienceBasedLearningPlatform

./: .gitignore  .tmp_pr_description.md  AGENTS.md  README.md  Taskfile.yaml  opencode.json
.github/: CODEOWNERS  PR_DESC.md  copilot-instructions.md  dependabot.yml
.github/agents/: claude-code-4.7.agent.md  gpt-5-mini.agent.md  gpt-5.5.agent.md
.github/workflows/: deploy-environment.yaml  deploy.yaml  dev-to-main-pr.yaml  opencode.yml
backend/AnkiAICardCreationToolboxBackend/: Dockerfile  README.md  pyproject.toml  pytest.ini
backend/AnkiAICardCreationToolboxBackend/src/ankiaicardcreationtoolboxbackend/: __init__.py  agent.py  main.py  tools.py
backend/AnkiAICardCreationToolboxBackend/src/ankiaicardcreationtoolboxbackend/data/: ANKI_FORMATTING_GUIDELINES.json  ANKI_FORMATTING_GUIDELINES_raw.json  BEST_PRACTICES_OF_FORMULATING_KNOWLEDGE.json  BEST_PRACTICES_OF_FORMULATING_KNOWLEDGE_raw.json
backend/AnkiAICardCreationToolboxBackend/src/ankiaicardcreationtoolboxbackend/knowledge_base/: chain.py  knowledge_base_config.py  knowledge_base_creation.py
backend/AnkiAICardCreationToolboxBackend/tests/: conftest.py  test_agent.py  test_api.py  test_knowledge_base_creation.py
docs/: content-model.md  contributing-content.md  curriculum-workflow.md
frontend/AnkiAICardCreationFrontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/AnkiAICardCreationFrontend/cypress/e2e/: example.cy.ts  readme-screenshot.cy.js
frontend/AnkiAICardCreationFrontend/scripts/: generate-cs1-curriculum.mjs  generate-ml1-curriculum.mjs
frontend/AnkiAICardCreationFrontend/src/: App.vue
frontend/AnkiAICardCreationFrontend/src/__tests__/: App.spec.ts
frontend/AnkiAICardCreationFrontend/src/assets/: base.css  main.css
frontend/AnkiAICardCreationFrontend/src/components/: AcademyShell.vue  AssessmentRunner.vue  LessonGraphCanvas.vue  LessonPreviewCard.vue  LessonSidebar.vue  MainComponent.vue  ModuleCard.vue  NeuralBackground.vue  OverviewComponent.vue  ProgressPanel.vue  TextInput.vue
frontend/AnkiAICardCreationFrontend/src/components/__tests__/: ImageInput.spec.ts  MainComponent.spec.ts  OverviewComponent.spec.ts  TextInput.spec.ts
frontend/AnkiAICardCreationFrontend/src/content/: curriculum.json  index.ts  model.ts  validate.ts
frontend/AnkiAICardCreationFrontend/src/lib/: progress.ts
frontend/AnkiAICardCreationFrontend/src/lib/__tests__/: progress.spec.ts
frontend/AnkiAICardCreationFrontend/src/router/: index.ts
frontend/AnkiAICardCreationFrontend/src/router/__tests__/: index.spec.ts
frontend/AnkiAICardCreationFrontend/src/views/: CardCreation.vue  DiagnosticView.vue  GraphView.vue  HomeView.vue  LearnOverviewView.vue  LessonView.vue  OverviewView.vue  PracticeView.vue  ReviewView.vue
frontend/AnkiAICardCreationFrontend/src/views/__tests__/: CardCreation.spec.ts  Image2LaTeX.spec.ts  OverviewView.spec.ts  PracticeView.spec.ts
infrastructure/: .terraform.lock.hcl  README.md  backend.tf  cloud_run.tf  main.tf  registry.tf
